@startuml

title __GRAPHIC's Class Diagram__\n


    namespace db {
      interface db.InterDB {
      }
    }

  


    namespace db {
      class db.StrDB {
      }
    }

  


    namespace javafx {
      class javafx.HelloApplication {
      }
    }

  


    namespace service {
      class service.HelloController {
      }
    }

  


    namespace service {
      class service.InterDBImpl {
      }
    }

  

  javafx.HelloApplication -up-|> javafx.application.Application
  service.HelloController .up.|> javafx.fxml.Initializable
  service.HelloController o-- db.InterDB : interDB
  service.HelloController o-- db.StrDB : strDBAdd
  service.InterDBImpl .up.|> db.InterDB


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
